Create card getter immage class to keep card immage