@@ -4,6 +4,8 @@ import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import com.google.common.collect.Lists;
+
 import model.deck.api.Deck;
 import model.deck.api.DeckBuild;
 
@@ -16,7 +18,7 @@ import model.deck.api.DeckBuild;
 public class DeckImpl<X> implements Deck<X> {
 
     private final DeckBuild<X> deckBuilder;
-    private List<X> deck;
+    private List<X> deck = Lists.newLinkedList();
 
     /**
      * Create and shuffle new deck.
@@ -46,7 +48,7 @@ public class DeckImpl<X> implements Deck<X> {
         } else {
             return Stream.iterate(0, t -> t + 1)
                     .limit(numberOfCard)
-                    .map(t -> this.deck.remove(0))
+                    .map(t -> this.deck.removeFirst())
                     .collect(Collectors.toList());
         }
 
